chore: replace knip/publint with e18e

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
 		"build": "tsdown",
 		"dev": "tsdown --watch",
 		"lint": "concurrently npm:lint:*",
-		"lint:biome": "biome check",
-		"lint:knip": "knip --production",
-		"lint:publint": "publint",
+		"lint:e18e": "e18e-cli analyze",
 		"prepack": "npm run build",
 		"prepare": "lefthook install",
 		"publish:npm": "np --any-branch",
@@ -49,9 +47,8 @@
 		"@types/node": "^24.10.2",
 		"@vitest/coverage-v8": "^3.2.4",
 		"concurrently": "^9.2.1",
-		"knip": "^5.72.0",
+		"@e18e/cli": "^0.3.1",
 		"np": "^10.2.0",
-		"publint": "^0.3.15",
 		"tsdown": "^0.15.12",
 		"vitest": "^3.2.4"
 	},
