--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
 		"LICENSE"
 	],
 	"exports": {
-		"types": "./dist/index.d.ts",
-		"import": "./dist/index.js",
+		"types": {
+			"import": "./dist/index.d.mts",
+			"require": "./dist/index.d.cts"
+		},
+		"import": "./dist/index.mjs",
 		"require": "./dist/index.cjs"
 	},
 	"type": "module",
