--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "tsdown",
 		"dev": "tsdown --watch",
 		"lint": "concurrently npm:lint:*",
+		"lint:biome": "biome check",
 		"lint:e18e": "e18e-cli analyze",
 		"prepack": "npm run build",
 		"prepare": "lefthook install",
